# verifirefox

./: number.py  package-lock.json
js/: moz.configure
js/src/: fuzzbuild.sh  js-cxxflags.mozbuild
js/src/jit/: BacktrackingAllocator.cpp  BacktrackingAllocator.h  CodeGenerator.cpp  Ion.cpp  JSONSerializer.cpp  JSONSerializer.h  JitOptions.cpp  LIR.cpp  LIR.h  Lowering.cpp  MIR.cpp  MIR.h  MIRGraph.cpp  MIRGraph.h  RegisterAllocator.cpp  RegisterAllocator.h  StupidAllocator.cpp  moz.build
js/src/jit/arm/: CodeGenerator-arm.cpp  Lowering-arm.cpp  Lowering-arm.h
js/src/jit/arm64/: CodeGenerator-arm64.cpp  Lowering-arm64.cpp  (+1 more)
js/src/jit/verifier/rust/: Cargo.toml  rustfmt.toml
js/src/jit/verifier/rust/src/: bag.rs  bindings.rs  execute.rs  kildall.rs  lib.rs  lir.rs  passes.rs
js/src/jit/verifier/rust/src/ast/: lir.rs  mir.rs
js/src/jit/verifier/rust/src/bindings/: ast.rs  execute.rs  handle.rs  passes.rs
js/src/jit/verifier/rust/src/bindings/ast/: lir.rs  mir.rs
js/src/jit/verifier/rust/src/bindings/passes/: reg_alloc.rs  spectre.rs  undef.rs
js/src/jit/verifier/rust/src/passes/: base.rs  reg_alloc.rs  spectre.rs  undef.rs
js/src/jit/verifier/rust/src/passes/reg_alloc/: ast.rs
js/src/jit/verifier/rust/src/passes/spectre/: array_traits.rs  reporting.rs
js/src/jit/verifier/rust/src/passes/undef/: lir.rs  mir.rs  mod.rs
js/src/rust/: Cargo.toml  moz.build
js/src/shell/: js.cpp
js/src/vm/: JSONPrinter.cpp  JSONPrinter.h  MutexIDs.h
python/mozbuild/mozbuild/: vendor_rust.py
toolkit/content/: license.html
tools/lint/: rustfmt.yml
(+28 files in other folders)
