[package]
name = "verifirefox"
version = "0.1.0"
authors = [
  "Fraser Brown <mlfbrown@stanford.edu>",
  "Michael Smith <mds009@eng.ucsd.edu>",
  "Deian Stefan <deian@cs.ucsd.edu>"
]
license = "MPL-2.0"
description = """
Online translation verifier for IonMonkey JIT IR
"""
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "verifirefox"

[dependencies]
anyhow = "^1.0.28"
thiserror = "^1.0.14"
bit-vec = "0.6.2"
typed_index_derive = "^0.1.4"

[dev-dependencies]
paste = "0.1"
